full working hotdog analyzer

--- a/src/pages/vision/vision.scss
+++ b/src/pages/vision/vision.scss
@@ -1,13 +1,13 @@
-ion-row {
-    height: 100%;
-}
+// ion-row {
+//     height: 100%;
+// }
 
-.centered {
-    display: flex;
-    flex-direction: row;
-    // align-items: center;
-    justify-content: center;
-}
+// .centered {
+//     display: flex;
+//     flex-direction: row;
+//     // align-items: center;
+//     justify-content: center;
+// }
 
 img { 
     width: 100%;
